Prevent int overflow

--- a/public/css/mainboard.css
+++ b/public/css/mainboard.css
@@ -202,7 +202,7 @@ body {
     }
 
     100% {
-        transform: translateX(1050%);
+        transform: translateX(calc(150vw));
     }
 }
 
